<resources>
	<string name="app_name">Helepolis</string>
	<string name="title_activity_main_root">Main Screen</string>
	<string name="rpwntext">Router\nPwn3r</string>
	<string name="username_text">Username</string>
	<string name="password_text">Password</string>
	<string name="login_text">Login</string>
	<string name="ipadd_text">IP Address:</string>
	<string name="pending_text">Pending…</string>
	<string name="router_pwner_title">Router Pwn3r</string>
	<string name="home_section_text">Home</string>
	<string name="settings_section_text">Settings</string>
	<string name="usr_pwd_check_text">Please input username/password first.</string>
	<string name="get_ip_provider">https://api.ipify.org/?format=raw</string>
	<string name="get_ip_details_ripe">https://stat.ripe.net/data/address-space-usage/data.json?resource=</string>
	<string name="repeat_password_text">Repeat pass</string>
	<string name="add_user_btn_text">Create</string>
	<string name="usr_pwd_rep_check_text">Please fill in all field.</string>
<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
