<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainLoginActivity"
                android:id="@+id/rootLayout"
                android:animateLayoutChanges="true">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/circleLogoAdd"
        android:src="@drawable/helepolis"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addUserTable"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_text"
                android:id="@+id/textView4"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="20dp"
                android:layout_column="0"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/usernameAdd"
                android:layout_column="1"
                android:inputType="textNoSuggestions"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_text"
                android:id="@+id/textView5"
                android:textSize="20dp"
                android:layout_column="0"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordAdd"
                android:layout_column="1"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_password_text"
                android:id="@+id/textView6"
                android:textSize="20dp"
                android:layout_column="0"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordRepeat"
                android:layout_column="1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_user_btn_text"
                android:id="@+id/createBtn"
                android:layout_marginTop="10dp"
                android:onClick="clickAddUser"/>
        </TableRow>

    </TableLayout>

</RelativeLayout>
